--- a/.config/VSCodium/User/settings.json
+++ b/.config/VSCodium/User/settings.json
@@ -6,7 +6,8 @@
     "telemetry.telemetryLevel": "off",
     "window.commandCenter": false,
     "window.menuBarVisibility": "compact",
-    "workbench.colorTheme": "Bearded Theme Monokai Reversed",
+    "workbench.colorTheme": "Bearded Theme Arc",
     "workbench.iconTheme": "bearded-icons",
-    "workbench.layoutControl.enabled": false
+    "workbench.layoutControl.enabled": false,
+    "workbench.tree.indent": 12,
 }
